# missive

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  package.json  pnpm-lock.yaml
deploy/: missive.service
src/: assets.rs  calendar.rs  config.rs  contacts.rs  error.rs  jmap.rs  jmap_raw.rs  main.rs  sanitize.rs  session.rs  webhook.rs
src/cli/: config_gen.rs  error.rs  exit_code.rs  mod.rs  sanity.rs  setup.rs
src/routes/: auth.rs  calendar.rs  contacts.rs  emails.rs  events.rs  mailboxes.rs  mod.rs  pages.rs
static/: manifest.json  offline.html  sw.js
static/css/: app.css  input.css
templates/: base.html  calendar.html  contacts.html  inbox.html  login.html
templates/partials/: app_header.html  app_nav.html  attachment_row.html  bulk_actions_bar.html  calendar_mini.html  compose_form.html  compose_success.html  contact_detail.html  contact_empty_state.html  contact_form.html  contact_list.html  email_detail.html  email_list.html  empty_state.html  event_detail.html  event_empty_state.html  event_form.html  event_list.html  flash_toast.html  mailbox_list.html  shortcuts_modal.html  star_button.html
tests/: jmap_search.rs  jmap_search_debug.rs
