[package]
name = "missive"
version = "0.1.0"
edition = "2024"

[dependencies]
acton-service = { version = "0.16.0", features = ["htmx-full"] }
ammonia = "4.1.2"
askama = "0.15.4"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = "0.4.44"
dashmap = "6.1.0"
futures-util = "0.3.32"
html2text = "0.16.7"
jmap-client = "0.4.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.6"
tower-http = { version = "0.6.8", features = ["fs"] }

[dev-dependencies]
dotenvy = "0.15.7"
serde_urlencoded = "0.7.1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
